--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,11 +7,10 @@
       <div class="container">
         <div class="navbar">
           <ul class="nav navbar-nav">
-            <li><a target="_blank" href="http://www.facebook.com/JakePlusBeats"><i style="font-size:40px; padding:10px" class="fa fa-facebook"></i></a></li>
-            <li><a target="_blank" href="http://www.instagram.com/JakePlusBeats"><i style="font-size:40px; padding:10px" class="fa fa-instagram"></i></a></li>
-            <li><a target="_blank" href="http://www.soundcloud.com/JakePlus"><i style="font-size:40px; padding:10px" class="fa fa-soundcloud"></i></a></li>
-            <li><a target="_blank" href="https://sptfy.com/JakePlus"><i style="font-size:40px; padding:10px" class="fa fa-spotify"></i></a></li>
-            <li><a target="_blank" href="http://twitter.com/JakePlusBeats"><i style="font-size:40px; padding:10px" class="fa fa-twitter"></i></a></li>
+            <li><a href="http://www.instagram.com/JakePlusBeats"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="http://www.soundcloud.com/JakePlus"><i class="fa fa-soundcloud"></i></a></li>
+            <li><a href="https://sptfy.com/JakePlus"><i class="fa fa-spotify"></i></a></li>
+            <li><a href="http://twitter.com/JakePlusBeats"><i class="fa fa-twitter"></i></a></li>
           </ul>
         </div>
         <!--/.nav-collapse -->
