--- a/css/main.scss
+++ b/css/main.scss
@@ -62,6 +62,11 @@ body {
     background: url(../img/concrete-hires-1-comp.png);
 }
 
+.site-header {
+    display: flex;
+    flex-direction: column;
+}
+
 .site-title img {
     filter: invert(1);
     max-width: 300px;
@@ -79,6 +84,18 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    width: 100%;
+    margin: 0;
+
+    i {
+        font-size: 40px;
+        padding: 10px;
+
+        @media (max-width: 500px) {
+            font-size: 30px;
+            padding: 5px;
+        }
+    }
 }
 
 .page-content {
@@ -88,7 +105,7 @@ body {
 
 #mc_embed_signup {
     clear:left;
-    width: 300px;
+    max-width: 300px;
     text-align: center; 
     color: #ccc;
     margin: 50px auto 0;
@@ -115,7 +132,7 @@ a.button,
 a.button:active,
 a.button:visited {
     display: block;
-    width: 300px;
+    max-width: 300px;
     background: #111;
     border: solid 2px #ccc;
     padding: 20px;
@@ -147,7 +164,7 @@ body.page {
             }
         }
         .site-title {
-            width: 100px;
+            max-width: 100px;
             margin-left: 20px;
         }
     }
