--- a/css/main.scss
+++ b/css/main.scss
@@ -165,6 +165,8 @@ body.page {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
+
         .navbar {
             .container {
                 width: auto;
@@ -181,10 +183,30 @@ body.page {
             max-width: 100px;
             margin-left: 20px;
             width: 100px;
+            margin-top: -10px;
+            
             @media (max-width: 500px) {
                 font-size: 25px;
                 width: 75px;
                 max-width: 75px;
+                min-width: 50px;
+                margin: 0;
+                margin-top: -10px;
+            }
+        }
+        .navbar {
+            @media (max-width: 500px) {
+                margin: 0;
+                height: 100%;
+
+                .nav>li>a {
+                    padding: 5px;
+                }
+                
+                .container {
+                    padding: 0;
+                    height: 100%;
+                }
             }
         }
     }
