fix: social links + page height

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,10 +7,10 @@
       <div class="container">
         <div class="navbar">
           <ul class="nav navbar-nav">
-            <li><a href="http://www.instagram.com/JakePlusBeats"><i class="fa fa-instagram"></i></a></li>
-            <li><a href="http://www.soundcloud.com/JakePlus"><i class="fa fa-soundcloud"></i></a></li>
+            <li><a href="https://www.youtube.com/channel/UCv-0f3VP0SGu2fqOQmEhXpQ"><i class="fa fa-youtube"></i></a></li>
             <li><a href="https://sptfy.com/JakePlus"><i class="fa fa-spotify"></i></a></li>
-            <li><a href="http://twitter.com/JakePlusBeats"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="http://www.soundcloud.com/JakePlus"><i class="fa fa-soundcloud"></i></a></li>
+            <li><a href="http://www.instagram.com/JakePlusBeats"><i class="fa fa-instagram"></i></a></li>
           </ul>
         </div>
         <!--/.nav-collapse -->
