style: new logo & bg

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div class="wrap">
-    <a class="site-title" href="{{ site.baseurl }}/"><img src="../img/Jake_Plus_Symbol.svg"></a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img src="../img/Jake-Plus-Logo-2021-holo.png"></a>
 
     <nav class="navbar">
       <div class="container">
