--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,13 +25,13 @@
     
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-37926982-11"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0EPH954N3G"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-37926982-11');
+      gtag('config', 'G-0EPH954N3G');
     </script>
 
 
