--- a/css/main.scss
+++ b/css/main.scss
@@ -73,7 +73,7 @@ body {
 
     img {
         @media (max-width: 500px) {
-            max-width: 150px;
+            max-width: 75px;
         }
     
         &:hover {
@@ -192,7 +192,6 @@ body.page {
                 max-width: 75px;
                 min-width: 50px;
                 margin: 0;
-                margin-top: -10px;
             }
         }
         .navbar {
@@ -216,6 +215,32 @@ body.page {
 
         iframe {
             border: 0;
+        }
+    }
+}
+
+
+// Pricing tables
+// -------------
+
+div.pricing-table {
+    width: 100%;
+
+    .row > div {
+        margin: 15px 0;
+        
+        .card {
+            background: rgba(0,0,0,0.7);
+            padding: 20px;
+            color: #ccc;
+
+            h3, h4 {
+                font-weight: bold;
+            }
+
+            h3 {
+                font-size: 2em;
+            }
         }
     }
 }
