feat: add services to shop

--- a/css/main.scss
+++ b/css/main.scss
@@ -233,6 +233,7 @@ div.pricing-table {
             background: rgba(0,0,0,0.7);
             padding: 20px;
             color: #ccc;
+            text-align: left;
 
             h3, h4 {
                 font-weight: bold;
