fix: spotify link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <div class="navbar">
           <ul class="nav navbar-nav">
             <li><a href="https://www.youtube.com/channel/UCv-0f3VP0SGu2fqOQmEhXpQ"><i class="fa fa-youtube"></i></a></li>
-            <li><a href="https://sptfy.com/JakePlus"><i class="fa fa-spotify"></i></a></li>
+            <li><a href="spotify://artist/26aqxv0QF3RzwRvJUETf2X?si=z4hDP5OLQsGuvEAz8tWE7g&si=z4hDP5OLQsGuvEAz8tWE7g"><i class="fa fa-spotify"></i></a></li>
             <li><a href="http://www.soundcloud.com/JakePlus"><i class="fa fa-soundcloud"></i></a></li>
             <li><a href="http://www.instagram.com/JakePlusBeats"><i class="fa fa-instagram"></i></a></li>
           </ul>
