--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
+    <meta name="facebook-domain-verification" content="oii8xzt4abv5vr7qhtreblce4j05rm" />
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
@@ -52,7 +53,7 @@
       t.src=v;s=b.getElementsByTagName(e)[0];
       s.parentNode.insertBefore(t,s)}(window, document,'script',
       'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '270687823438184');
+      fbq('init', '748949109777934');
       fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
