--- a/css/main.scss
+++ b/css/main.scss
@@ -59,7 +59,7 @@ html, body {
 body {
     display: flex;
     flex-direction: column;
-    background: url(../img/giphy-9.gif);
+    background: url(../img/200w-2.gif);
 }
 
 .site-header {
