--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -137,23 +137,25 @@
 .post-content {
     margin-bottom: $spacing-unit;
 
-    h2 {
+    h2, .h2 {
         font-size: 32px;
+        font-weight: bold;
 
         @include media-query($on-laptop) {
             font-size: 28px;
         }
     }
 
-    h3 {
+    h3, .h3 {
         font-size: 26px;
+        font-weight: bold;
 
         @include media-query($on-laptop) {
             font-size: 22px;
         }
     }
 
-    h4 {
+    h4, .h4 {
         font-size: 20px;
 
         @include media-query($on-laptop) {
